Refactor FriendsCommand and FriendsManager for improved functionality; add EarlyAccessPaywall and AsyncPlayerPreLoginEventHook